--- a/login-css/login.css
+++ b/login-css/login.css
@@ -178,3 +178,14 @@ body{
       background-position: 0% 50%;
     }
   }
+@media only screen and (max-width: 767px) {
+    .block-element{
+        height: 50vh;
+        width: 60%;
+    }
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }  
+}
