--- a/login-css/signup.css
+++ b/login-css/signup.css
@@ -174,3 +174,17 @@ body{
       background-position: 0% 50%;
     }
   }
+@media only screen and (max-width: 767px) {
+    .block-element{
+        height: 50vh;
+        width: 75%;
+    }
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    } 
+    .button-part{
+      margin-top: 1.5rem;
+    } 
+}
