--- a/login-css/signup.css
+++ b/login-css/signup.css
@@ -10,6 +10,9 @@ body{
     background-size: 400% 400%;
     animation: GradientBG 5s ease infinite;
     background: linear-gradient(45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
 .signup,.login{
     color: bisque;
@@ -32,13 +35,14 @@ body{
 }
 .block-element{
     background-color: transparent;
-    width: 22%;
-    height: 60vh;
-    display: grid;
+    /* width: 100%; */
+    /* height: 75vh; */
+    /* display: grid; */
     margin: auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    grid-template-rows: 20px 1fr 10px 50px ;
+    /* grid-template-rows: 20px 1fr 100px 50px ; */
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
     padding: 30px;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.5); /* Adds a semi-transparent white background */
@@ -88,7 +92,6 @@ body{
 .agree-button{
     display: grid;
     margin: auto;
-    margin-top: -30px;
     z-index: 9999;
 }
 .button-part{
@@ -176,7 +179,6 @@ body{
   }
 @media only screen and (max-width: 767px) {
     .block-element{
-        height: 55vh;
         width: 75%;
     }
     body{
@@ -184,7 +186,13 @@ body{
       justify-content: center;
       align-items: center;
     } 
-    .button-part{
+    /* .button-part{
       margin-top: 1.5rem;
-    } 
+    }  */
+}
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .block-element{
+    width: 100%;
+    grid-template-rows: 20px 1fr 95px 50px;
+  }
 }
