--- a/menu-css/delivery-service.css
+++ b/menu-css/delivery-service.css
@@ -71,7 +71,7 @@
     }
     .delivery-how-text p{
         margin: 0;
-        font-size: medium;
+        font-size: 1.2rem;
     }
     .delivery-grid{
         margin-top: 1.5rem;
