--- a/menu-css/Thumbnail.css
+++ b/menu-css/Thumbnail.css
@@ -246,54 +246,58 @@
     }
     .product-detail-usct{
         background-color: white;
-        width: 55%;
+        width: 75%;
         display: flex;
         flex-direction: column;
         row-gap: 0.4rem;
         padding: 15px;
-        border-radius: 8px;
-        
+        border-radius: 10px;
+        max-width: 400px;
+        min-width: 300px;
+        box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.16);
     }
     .product-detail-img{
         position: relative;
     }
     .product-detail-img img{
         width: 100%;
-        height: 100%;
         border-radius: 8px;
+        max-height: 300px;
         object-fit: cover;
-        object-position: center;
-        
+        object-position: bottom;
     }
     .product-detail-pricing p{
         margin: 0;
         background-color: white;
-        padding: 5px 10px;
+        padding: 3px 7px;
         position: absolute;
-        top: 5px;
+        top: 7px;
         left: 10px;
         border-radius: 10px;
         font-weight: 600;
+        font-size: 1.3em;
+        align-items: center;
     }
     .product-detail-stars{
         display: flex;
         justify-content: center;
         align-items: center;
-        column-gap:2px;
+        column-gap:4px;
         background-color: white;
         position: absolute;
-        top: 5px;
+        top: 7px;
         right: 10px;
-        padding: 5px 7px;
+        padding: 3px 8px;
         border-radius: 10px;
     }
     .product-detail-stars p{
         margin: 0;
         font-family: poppins;
         font-weight: 600;
+        font-size: 1.3em;
     }
     .product-detail-stars img{
-        width: 15px;
+        width: 18px;
     }
     .product-detail-title-views{
         display: flex;
@@ -308,27 +312,27 @@
         justify-content: space-between;
     }
     .product-detail-title p,.product-detail-views p{
-        font-size: 20px;
+        font-size: 21px;
         font-weight: 700;
     }
     .product-detail-basketImg button{
         border: none;
         border-radius: 100px;
-        height: 32px;
-        width:  32px;
+        height: 40px;
+        width:  40px;
         background-color: #FF902A;
         display: flex;
         align-items: center;
         justify-content: center;
     }
     .basketImg{
-        width: 15px;
+        width: 18px;
     }
 
     .product-detail-description p{
         margin: 0;
         font-family: poppins;
-        font-size: 12px;
+        font-size: 15px;
         color: #7E7D7A;
 
     }
