--- a/menu-css/Aboutus.css
+++ b/menu-css/Aboutus.css
@@ -95,3 +95,51 @@
     /* Increasing the padding on hover for the About Us button. */
     padding: 14px 19px;
 }
+@media only screen and (max-width: 767px) {
+    .About-us-grid{
+        display: flex;
+        flex-direction: row;
+        column-gap: 1rem;
+    }
+    .About-us-image{
+        width: 100%;
+        position: static;
+        margin-left: 1rem;
+    }
+    .About-us-image img{
+        position: static;
+        width: 100%;
+        height: min-content;
+        margin-top: -2rem;
+    }
+    .About-us-description{
+        width: 100%;
+        padding-right: 1rem;
+    }
+    .About-us{
+        height: auto;
+    }
+    .About-us-description{
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        align-items: center;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        row-gap: 0.6rem;
+    }
+    .About-us-description-p2{
+        text-align: center;
+    }
+    .About-us-description-p2 p{
+        font-size: 1rem;
+        margin: 0;
+    }
+    .About-us-description-p3{
+        text-align: center;
+    }
+    .About-us-description-p3 p{
+        font-size: 0.8rem;
+        margin: 0;
+    }
+}
