--- a/menu-css/Aboutus.css
+++ b/menu-css/Aboutus.css
@@ -102,14 +102,14 @@
         column-gap: 1rem;
     }
     .About-us-image{
-        width: 100%;
         position: static;
         margin-left: 1rem;
+        width: auto;
+        display: none;
     }
     .About-us-image img{
-        position: static;
         width: 100%;
-        height: min-content;
+        height: 50%;
         margin-top: -2rem;
     }
     .About-us-description{
@@ -127,6 +127,7 @@
         padding-top: 1rem;
         padding-bottom: 1rem;
         row-gap: 0.6rem;
+        padding-left: 1rem;
     }
     .About-us-description-p2{
         text-align: center;
