--- a/OurProduct/css/header.css
+++ b/OurProduct/css/header.css
@@ -2,7 +2,7 @@
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 .header{
-    height: 75px;
     margin-top: 0;
     width: 100%;
+    height: auto;
 }
