--- a/Delivery/paymentInfo.css
+++ b/Delivery/paymentInfo.css
@@ -10,6 +10,7 @@
     display: grid;
     grid-template-rows: 1fr;
     margin: 0px 15px;
+    width: auto;
 }
 .productElement-flex{
     display: flex;
@@ -81,4 +82,75 @@
 }
 .subtotal,.subtotal-js{
     text-align: right;
+}
+@media only screen and (max-width: 767px) {
+    .product{
+        flex: 1;
+    }
+    .payementInfo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .shopping-cart{
+        font-size:xx-large;
+    }
+    .productElement-grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    .ProductElement-flex-js{
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        width: 100%;
+        justify-content:space-around;
+    }
+    .product-js{
+        flex: 1;
+        display: grid;
+        column-gap: 0;
+        grid-template-columns: 1fr 1fr;
+        max-width: 85.28px;
+        padding: 10px;
+    }
+    .product-js button{
+        padding: 0;
+        width: max-content;
+    }
+    .product-img{
+        width:50px;
+        height: 50px;
+    }
+    .product-name{
+        grid-column: 1 / span 2;
+        font-size:small;
+        text-align: center;
+        margin: 0;
+    }
+    .price-js{
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        flex: none;
+    }
+    .quantity-js{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 2px;
+        flex: none;
+    }
+    .subtotal-js{
+        flex: none;
+    }
+    .productElement-flex{
+        width: 100%;
+    }
+    .quantity-p{
+        margin: 0;
+    }
 }
